Fully done for now. Version 1.0.0 is live